fix misalignment

--- a/front/src/app/_components/account-overlay/account-overlay.component.scss
+++ b/front/src/app/_components/account-overlay/account-overlay.component.scss
@@ -8,6 +8,10 @@
     padding: 0 16px;
   }
 
+  mat-icon.overflow {
+    overflow: unset;
+  }
+
   .name-container {
     padding: 0 15px;
     margin-bottom: 10px;
